French-Canadian keyboard: Blender thinks the Home key is the grave accent (`) key. #100354

Closed
opened 2022-08-12 01:32:10 +02:00 by Julien · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: Radeon RX 590 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.2 30.0.21017.1000

Blender Version
Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: bcfdb14560
Worked: 3.0.1 (or later)

Short description of error
In all contexts, pressing the Home key in Blender will perform the action assigned to ` (two keys to the right of the L key, on a US keyboard).

In the Keymap preferences, choosing the Home key for an action will also display ` in the textbox.

Curiously, deactivating the shortcut for **`**will allow the Home key to function normally, performing the "Frame All" action by default.Exact steps for others to reproduce the error

  1. On Windows 10, set the language to "French (Canada)", with the keyboard as "French keyboard (Canada)".
  2. In Blender, use the Home key and see it perform the action assigned to `.

Thank you.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: Radeon RX 590 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.2 30.0.21017.1000 **Blender Version** Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: `bcfdb14560` Worked: 3.0.1 (or later) **Short description of error** In all contexts, pressing the Home key in Blender will perform the action assigned to **`** (two keys to the right of the L key, on a US keyboard). In the Keymap preferences, choosing the Home key for an action will also display **`** in the textbox. Curiously, deactivating the shortcut for **`**will allow the Home key to function normally, performing the "Frame All" action by default.**Exact steps for others to reproduce the error** 1. On Windows 10, set the language to "French (Canada)", with the keyboard as "French keyboard (Canada)". 2. In Blender, use the Home key and see it perform the action assigned to **`**. Thank you.
Author

Added subscriber: @Jarvis-1

Added subscriber: @Jarvis-1

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by ffd4f4a486

This issue was referenced by ffd4f4a486c86fc69c14122372fef05263b572c3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-08-12 23:55:34 +02:00
Author

Much appreciated, thanks for the fix!

Much appreciated, thanks for the fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100354
No description provided.