Fix T100354: Home key being the grave accent in french keyboard layout

I'm still not sure how the `0xFF` value came about, but it's not a
valid virtual key code.

Therefore it should not be used in `MapVirtualKey`.